# FFmpegExamples

./: CMakeLists.txt  README.md
examples/avio_list_dir/: CMakeLists.txt
examples/avio_reading/: CMakeLists.txt
examples/decode_audio/: CMakeLists.txt
examples/decode_video/: CMakeLists.txt
examples/demuxing_decoding/: CMakeLists.txt
examples/encode_audio/: CMakeLists.txt
examples/encode_video/: CMakeLists.txt
examples/extract_mvs/: CMakeLists.txt
examples/filter_audio/: CMakeLists.txt
examples/filtering_audio/: CMakeLists.txt
examples/filtering_video/: CMakeLists.txt
examples/http_multiclient/: CMakeLists.txt
examples/hw_decode/: CMakeLists.txt
examples/metadata/: CMakeLists.txt
examples/muxing/: CMakeLists.txt
examples/qsvdec/: CMakeLists.txt  qsvdec.c
examples/remuxing/: CMakeLists.txt
examples/resampling_audio/: CMakeLists.txt
examples/scaling_video/: CMakeLists.txt
examples/transcode_aac/: CMakeLists.txt
examples/transcoding/: CMakeLists.txt
examples/vaapi_encode/: CMakeLists.txt
examples/vaapi_transcode/: CMakeLists.txt
playground/: CMakeLists.txt
